change basic application

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/solar/bulmaswatch.min.css">
 </head>
 <body>
-<div class="application"></div>
+<div class="vue-target"></div>
 <script src="./dist/app.js"></script>
 </body>
 </html>
