add initial styles for icons in menu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Resource Sentry Demo: Simple Navigator</title>
     <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/solar/bulmaswatch.min.css">
+    <link rel="stylesheet" href="./dist/style.css">
 </head>
 <body>
 <div class="vue-target"></div>
